# yt_scraper

./: base.py  get_yt_video_audio_only.py  get_yt_video_captions.py  get_yt_video_cut.py  get_yt_video_list_and_glue_them_together.py  get_yt_video_mp4.py  get_yt_video_o_auth_mp4.py  pyproject.toml  settings.py
