[project]
name = "yt-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Angelo Siqueira",email = "angeloasiqueira@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytubefix (>=9.5.0,<10.0.0)",
    "moviepy (>=2.2.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
